some css to center video, add red color to button

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -46,12 +46,15 @@ body {
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
+  display: inline-block;
   border-bottom: 1px solid #e5e5e5;
 }
 
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
+  color: #fff;
+  background-color: #e52d27;
 }
 
 /* Supporting marketing content */
