--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,13 @@
+#playButton {
+  color: #fff;
+  background-color: #e52d27;
+  text-align: center;
+}
+
+#playButton span {
+  margin: 5px;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -52,9 +62,7 @@ body {
 
 .jumbotron .btn {
   font-size: 21px;
-  padding: 14px 24px;
-  color: #fff;
-  background-color: #e52d27;
+  /*padding: 14px 24px;*/
 }
 
 /* Supporting marketing content */
